--- a/css/style.css
+++ b/css/style.css
@@ -58,5 +58,9 @@ footer.page-footer {
 .circle {
     width: 200px;
     height: 2000px;
-    padding-right: 100px;
+}
+
+.responsive-img {
+    border-radius: 50%;
+    width: 200px;
 }
