--- a/css/style.css
+++ b/css/style.css
@@ -62,5 +62,7 @@ footer.page-footer {
 
 .responsive-img {
     border-radius: 50%;
-    width: 300px;
+    width: 200px;
+    margin-right: 20px;
+    margin-left: 20px
 }
