--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,6 @@ footer.page-footer {
 .responsive-img {
     border-radius: 50%;
     width: 200px;
-    margin-right: 20px;
-    margin-left: 20px
+    margin-left: 10px;
+    margin-right: 10px;  
 }
